# garbled-snark-verifier

./: .gitignore  Cargo.toml  README.md
.github/workflows/: gate-count-badges.yml
badge_data/: and.json  free.json  nonfree.json  not.json  total.json  xor.json
benches/: groth16_verifier.rs
docs/: subcircuit_format.md  topology_format.md
examples/: groth16_gc_gate_count.rs
src/: circuit.rs  cut_and_choose.rs  delta.rs  gate.rs  lib.rs  s.rs  wire.rs
src/circuit/: basic.rs  commitment.rs  errors.rs  evaluation.rs  finalized.rs  garbling.rs  mod.rs  structure.rs  test.rs  test_util.rs  u256.rs
src/circuit/bigint/: add.rs  cmp.rs  mod.rs  mul.rs
src/circuit/bn254/: fp254impl.rs  fq.rs  fr.rs
src/circuit/u256/: add.rs  cmp.rs
src/circuits/: basic.rs  groth16.rs  groth16_topology.rs  mod.rs
src/circuits/bigint/: add.rs  cmp.rs  mod.rs  mul.rs  utils.rs
src/circuits/bn254/: finalexp.rs  fp254impl.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g1.rs  g2.rs  pairing.rs
src/core/: bristol.rs  circuit.rs  delta.rs  gate.rs  gate_type.rs  mod.rs  s.rs  serialization.rs  topology.rs  wire.rs
src/core/gate/: garbling.rs  mod.rs
src/duplo/: commitment.rs  mod.rs  protocol.rs  soldering.rs
src/gadgets/: basic.rs
src/gadgets/bigint/: add.rs  cmp.rs  mod.rs  mul.rs
src/gadgets/bn254/: fp254impl.rs  fq.rs  fr.rs  g1.rs  mod.rs
src/math/: mod.rs  montgomery.rs
src/protocol/: cut_and_choose.rs  mod.rs
tests/: cut_and_choose.rs  montgomery_mul.rs
