[package]
name = "garbled-snark-verifier"
version = "0.2.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
bitvec = "1.0.1"
blake3 = { version = "1.6.1", features = ["traits-preview"] }
digest = "0.10"
log = "0.4.27"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.9.1"
rayon = "1.10.0"
thiserror = "2.0.12"

[dev-dependencies]
ark-ec = "0.5.0"
sha2 = "0.10"
test-log = "0.2.8"
